--- a/pagina2.html
+++ b/pagina2.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inkodeapp</title>
 </head>
+
 <body>
-    <h1>pagina 2</h1>
-    <a href="index.html">volver</a>
+    <h1>Mi Pagína Web</h1>
+<img src="static/logo.jpg" alt="inkodeapp">
+
+
 </body>
+
 </html>
