--- a/index.html
+++ b/index.html
@@ -4,24 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./normalize.css">
     <title>Primera Web</title>
 </head>
 
 <body>
-    <h1>Hola Mundo!</h1>
-    <h2>Hola Mundo!</h2>
-    <h3>Hola Mundo!</h3>
-    <h4>Hola Mundo!</h4>
-    <h5>Hola Mundo!</h5>
-    <h6>Hola Mundo!</h6>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita culpa a dolorem fugit, libero debitis eos
-        nostrum blanditiis, odit ipsum unde doloremque quae? Saepe ea veritatis commodi labore dolor dignissimos.</p>
-    <b>Negrita</b>
-    <i>Italica</i>
-    <strike>Tachado</strike>
-    <small>Letra Chiquita</small>
-    <a href="pagina2.html" >Facebook</a>
-
+    <header>
+        <nav>
+            <h1>Inkodeapp</h1>
+        </nav>
+    </header>
 
 </body>
 
